--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         debug {
@@ -81,6 +82,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.zhy:okhttputils:2.6.2'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.github.vipulasri:timelineview:1.0.6'
 }
 
 androidExtensions {
