--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <activity android:name=".header.sbly.SblyDetailAct" />
         <activity android:name=".header.ycsq.cllx.ui.CllxAct" />
         <activity android:name=".n.ggxx.ui.GgxxAct" />
-        <activity android:name=".n.attachment.AttachmentAct"></activity>
+        <activity android:name=".n.attachment.AttachmentAct" />
+        <activity android:name=".n.process.ui.ProcessAct"></activity>
     </application>
 
 </manifest>
