--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         <activity android:name=".header.ycsq.YcsqAct" />
         <activity android:name=".header.sbbf.SbbfDetailAct" />
         <activity android:name=".header.wply.detail.WplyDetailAct" />
-        <activity android:name=".header.sbly.SblyDetailAct" />
+        <activity android:name=".header.sbly.detail.SblyDetailAct" />
         <activity android:name=".header.ycsq.cllx.ui.CllxAct" />
         <activity android:name=".n.ggxx.ui.GgxxAct" />
         <activity android:name=".n.attachment.AttachmentAct" />
