--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         <activity android:name=".header.wply.WplyAct" />
         <activity android:name=".header.sbly.SblyAct" />
         <activity android:name=".header.ycsq.YcsqAct" />
-        <activity android:name=".header.sbbf.SbbfDetailAct" />
+        <activity android:name=".header.sbbf.detail.SbbfDetailAct" />
         <activity android:name=".header.wply.detail.WplyDetailAct" />
         <activity android:name=".header.sbly.detail.SblyDetailAct" />
         <activity android:name=".header.ycsq.cllx.ui.CllxAct" />
