--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation 'com.github.vipulasri:timelineview:1.0.6'
     implementation 'me.majiajie:pager-bottom-tab-strip:2.3.0'
     implementation 'com.loopeer.lib:shadow:0.0.4-beta2'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
 
 androidExtensions {
